[tool.poetry]
name = "bluescript"
version = "0.1.0"
description = ""
authors = ["Macroft <macroft@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.111.0"
uvicorn = {extras = ["standard"], version = "^0.30.1"}
databases = "^0.9.0"
psycopg2-binary = "^2.9.9"
python-jose = "^3.3.0"
sqlalchemy = "^2.0.30"
argon2-cffi = "^23.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
